# FirstCppProject

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  License.txt  build.sh  config.h.in  configure.sh  install.sh  run.sh  run_ml.sh  run_mnist_ml.sh  run_restful.sh  run_windows.sh  test.sh
src/: CMakeLists.txt  config.h
src/core/: CMakeLists.txt  coreConfig.cmake
src/core/app/: CMakeLists.txt
src/core/app/app/: app.cpp  argsparser.cpp
src/core/app/core/: base.cpp  exception.cpp
src/core/app/include/: core.h  pch.h
src/core/backend/: CMakeLists.txt
src/core/backend/glfw/: window_impl.cpp  window_impl.hpp
src/core/backend/imgui/: imgui_layer.cpp  imgui_layer.hpp
src/core/classloader/: CMakeLists.txt
src/core/classloader/cpp/: class_loader_core.cpp  multi_library_class_loader.cpp  shared_library.cpp  shared_library_unix.cpp
src/core/classloader/plugin/: plugin_loader.cpp
src/core/cpp/: CMakeLists.txt  app.cpp  argsparser.cpp  exception.cpp  log.cpp  logger.cpp  timer.cpp  utilities.cpp
src/core/cpp/app/: app.cpp  app_impl.cpp  argsparser.cpp  context.cpp  window_app.cpp
src/core/cpp/classloader/: class_loader.cpp  class_loader_core.cpp  meta_object.cpp  multi_library_class_loader.cpp  shared_library.cpp  shared_library_unix.cpp
src/core/cpp/core/: utilities.cpp
src/core/cpp/helper/: char_encoding.cpp  timer.cpp
src/core/cpp/plugin/: plugin_loader.cpp
src/core/cpp/resource/: random.cpp
src/core/cpp/window/: imgui_layer.cpp  layer.cpp  layerstack.cpp
src/core/editor/: CMakeLists.txt
src/core/editor/core/: editor.cpp
src/core/editor/panels/: editor_main_menubar.cpp  editor_main_panel.cpp  editor_main_panel.hpp  imgui_main_menu_bar.cpp  renderer2D_panel.cpp  toolbar.cpp  toolbar.hpp
src/core/include/: app.h  argsparser.h  configuration.h  core.h  exception.h  exception.hpp  host.h  http.h  log.h  logger.h  mastercontroller.h  pch.h  platform.hpp  singleton.h  timer.h  utilities.hpp  visibility_control.hpp  worker.h
src/core/include/app/: app.hpp  app_impl.hpp  argsparser.h  context.hpp  entry_point.h  window_app.hpp
src/core/include/classloader/: CMakeLists.txt  class_loader.hpp  class_loader_core.hpp  dynamic_class.h  dynamic_class.hpp  meta_object.hpp  multi_library_class_loader.hpp  register_macro.hpp  shared_library.h  shared_library.hpp  shared_library_unix.h  shared_library_unix.hpp  shared_library_win.hpp
src/core/include/core/: base.hpp  key_code.hpp  mouse_codes.h  platform.hpp  visibility_control.hpp
src/core/include/event/: application_event.h  application_event.hpp  event.hpp  event_dispatcher.hpp  event_if.hpp  key_event.hpp  mouse_event.h  mouse_event.hpp
src/core/include/file_system/: package.h
src/core/include/helper/: char_encoding.h  container_utility.hpp  property.hpp  stream_formatter.hpp  timer.hpp
src/core/include/io/: input.hpp
src/core/include/plugin/: class_desc.hpp  plugin_export_macro.hpp  plugin_loader_if.hpp  plugin_loader_impl.hpp
src/core/include/resource/: CMakeLists.txt  event.hpp  mastercontroller.hpp  object_pool.hpp  random.hpp  resourceConfig.cmake.in  singleton.hpp  thread_pool.hpp  timer.hpp  worker.hpp
src/core/include/window/: imgui_layer.hpp  layer.hpp  layerstack.hpp  window.hpp
src/core/platform/: CMakeLists.txt
src/core/platform/linux/: input_impl.cpp  input_impl.hpp  linux_window.cpp  linux_window.hpp
src/core/renderer/: CMakeLists.txt
src/core/renderer/buffers/: AFrame_buffer.cpp  AFrame_buffer.hpp  AIndex_buffer.cpp  AIndex_buffer.hpp  AVertex_array.cpp  AVertex_array.hpp  AVertex_buffer.cpp  AVertex_buffer.hpp  buffer_layout.hpp
src/core/renderer/core/: ARenderer_api.cpp  ARenderer_api.hpp  render_command.cpp  (+3 more)
src/core/tools/: CMakeLists.txt
src/core/ui/: CMakeLists.txt
src/core/window/: CMakeLists.txt
src/main_prog/: CMakeLists.txt
src/main_prog/cpp/: args.cpp  httplib_trial.cpp  main.cpp  thread_active_object.cpp  thread_trial.cpp
src/main_prog/include/: args.h  args.hpp
src/main_restful/: CMakeLists.txt
src/main_restful/cpp/: args.cpp  main.cpp
src/main_windows/: CMakeLists.txt  Windows-App.json
src/main_windows/cpp/: args.cpp  example_layer.cpp  main.cpp  sandbox.cpp  sandbox2D.cpp  sandbox_app.cpp
src/main_windows/include/: args.hpp  example_layer.hpp  sandbox2D.hpp
src/math_lib/: CMakeLists.txt
src/math_lib/cpp/: CMakeLists.txt  dummy.cpp  foo.cpp  xuzy_math.cpp
src/math_lib/include/: dummy.h  foo.h  foo_if.h  xuzy_math.h
src/ml/: CMakeLists.txt  main.cpp  main_cpp.cpp  pch.h
src/mnist_ml/: CMakeLists.txt  main.cpp
src/mnist_ml/knn/: CMakeLists.txt
src/my_lib/: CMakeLists.txt
src/my_lib/cpp/: dummy.cpp  foo.cpp  logger.cpp  thread_active_object.cpp  thread_trial.cpp  xuzy_math.cpp
src/my_lib/include/: dummy.h  foo.h  foo_if.h  logger.h  pimpl.hpp  stream_formatter.hpp  xuzy_math.h
src/restful/: CMakeLists.txt  restful.cpp  restful.h  restful.hpp  restfulConfig.cmake  restful_server.cpp  restful_server.h  restful_server.hpp
src/restful/api/: CMakeLists.txt  api.cpp  api.h
src/restful/host/: cert.pem  key.pem
src/restful/http/: handler.cpp  handler.h  host.h  host.hpp  listener.cpp  listener.h  response_codes.h  restful.h  restful_server.cpp  restful_server.hpp
tests/: CMakeLists.txt  main_test.cpp
tests/core/: class_loader_test.cpp  classloader_test.cpp  container_utility_test.cpp  event_dispatcher_test.cpp  event_test.cpp  ini_file_test.cpp  key_event_test.cpp  log_test.cpp  multi_class_loader_test.cpp  object_pool_test.cpp  random_test.cpp  shared_library_test.cpp  singleton_test.cpp  stream_formatter_test.cpp  thread_pool_test.cpp
tests/main_prog/: CMakeLists.txt
tests/math_lib/: dummy_test.cpp  math_test.cpp  mock_foo.h
tests/my_lib/: CMakeLists.txt  dummy_test.cpp  logger_test.cpp  math_test.cpp  stream_formatter_test.cpp
tests/restful/: CMakeLists.txt  restful_server_test.cpp
tests/sample_lib/: CMakeLists.txt  dynamicclassregistry.hpp  rectangle.hpp  shape.hpp  square.hpp  symbol_test.cpp
tests/sample_plugins/: CMakeLists.txt  base.hpp  plugins1.cpp  plugins2.cpp
(+350 files in other folders)
